[package]
name = "falk"
version = "0.1.0"
authors = ["Mathias <mathias@c8c4.org>"]
edition = "2018"
description = "Placeholder."
documentation = "https://docs.rs/falk"
homepage = "https://github.com/mjhennig/rust-falk"
license = "X11"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mjhennig/rust-falk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
